# command-ghostwriter

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  .releaserc.json  CLAUDE.local.md  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  command-ghostwriter.code-workspace  flake.nix  package-lock.json  package.json  pyproject.toml
.apm/instructions/: master.instructions.md
.claude/: settings.json
.claude/hooks/: clairvoyance-session-start.sh  git-identity-session-start.sh  superpowers-session-start.sh
.claude/skills/: .superpowers-manifest.sha256
.claude/skills/adaptive-coaching/: SKILL.md
.claude/skills/architecture-tradeoff/: SKILL.md
.claude/skills/clairvoyance/: SKILL.md
.claude/skills/decision-coaching/: SKILL.md
.claude/skills/human-harness/: SKILL.md
.claude/skills/review-verdict/: SKILL.md
.claude/skills/session-handoff/: SKILL.md
.claude/skills/using-clairvoyance/: SKILL.md
.cursor/rules/: B-002_domain.mdc
.devcontainer/claude/: devcontainer.json
.devcontainer/codex/: devcontainer.json
.devcontainer/config/claude/: settings.json
.devcontainer/config/codex/: config.toml
.devcontainer/config/profile.d/: command-ghostwriter-agent-prompt.sh  command-ghostwriter-nix-path.sh
.devcontainer/scripts/: check-gh-config-permissions.sh  configure-agent-runtime.sh  install-agent-cli.sh  prepare-agent-workspace.sh
.github/: dependabot.yml
.github/actions/build-stlite/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test-python-playwright/: action.yml
.github/workflows/: release.yml  reusable-skip-summary.yml  reusable-test-and-build.yml  sync-agent-instructions.yml  sync-claude-md.yml  test-and-build-on-merged.yml  test-and-build-on-pr-skip.yml  test-and-build-on-pr.yml  test-and-build-on-push.yml  verify-superpowers.yml  web-ci.yml
assets/examples/: cisco-switchport.j2  cisco-switchport.toml  dns-zone.j2  dns-zone.toml  firewall-rules.csv  firewall-rules.j2  incident-campus.j2  incident-campus.yaml  incident-proxy.j2  incident-proxy.yaml  linux-init.j2  linux-init.yaml  yamaha-router.j2  yamaha-router.toml
design/redesign-b/: HANDOFF.md  README.md
design/redesign-b/app/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
design/redesign-b/chats/: chat1.md
design/redesign-b/project/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
docs/: commands.md  versioning.md
docs/history/: 2026-06-04-cursor-to-claude-migration.md  README.md
docs/prd/: README.md  command-ghostwriter.md
docs/proposals/: README.md  harden-runner-billing-investigation.md
docs/runbooks/: README.md  cloudflare-workers-deploy.md  commands.md  vercel-deploy.md
docs/standards/: README.md  ci-cd.md  directory-structure.md  local-development.md  package-management.md  python-coding.md  python-security.md  python-testing.md
docs/superpowers/plans/: 2026-06-04-cursor-to-claude-migration.md  2026-06-04-devcontainer-rework.md  2026-06-04-repo-uv-migration.md  2026-06-06-ci-e2e-matrix-redesign-sub2.md  2026-06-10-chardet7-and-dependabot-bumps.md  2026-06-10-node-deps-cooldown-bumps.md  2026-06-11-local-workflow-lint-gate.md  2026-06-11-superpowers-drift-detection.md  2026-06-12-csv-stdlib-migration.md  2026-06-12-frontend-p1a-pyodide-bringup.md  2026-06-12-frontend-p1b-live-preview-ui.md  2026-06-12-frontend-p2-parity.md  2026-06-13-claude-md-master-sync.md  2026-06-30-redesign-b-p1-foundation.md  2026-06-30-redesign-b-p2-cutover.md  2026-06-30-redesign-b-p3-cloudflare-workers.md  2026-06-30-retire-streamlit-impl.md  2026-07-02-sync-apm-skills-upstream-update.md
docs/superpowers/specs/: 2026-06-04-cursor-to-claude-prd-migration-design.md  2026-06-04-devcontainer-rework-design.md  2026-06-06-ci-runtime-reduction-design.md  2026-06-09-pytest-parallel-walltime-design.md  2026-06-10-chardet7-and-dependabot-bumps-design.md  2026-06-10-node-deps-cooldown-bumps-design.md  2026-06-11-local-workflow-lint-gate-design.md  2026-06-11-superpowers-drift-detection-design.md  2026-06-12-streamlit-to-vercel-migration-design.md  2026-06-13-claude-md-master-sync-design.md  2026-06-30-redesign-b-migration-design.md  2026-06-30-retire-streamlit-impl-design.md  2026-07-02-sync-apm-skills-upstream-update-design.md
features/: config_parser.py  document_render.py  transcoder.py  validate_template.py
scripts/: _session_path.sh  apply_version.mjs  ci-parity.sh  flake_pin.py  gen_superpowers_manifest.py  inspect_release_archive.sh  install-workflow-linters.sh
tests/: test_app_integration.py
tests/e2e/: conftest.py  helpers.py  test_e2e.py
tests/unit/: test_config_parser.py  test_document_render.py  test_flake_pin.py  test_gen_superpowers_manifest.py  test_inspect_release_archive.py  test_install_workflow_linters.py  test_transcoder.py
tests/workflow/: test_release_management.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
web/e2e/: render-parity.spec.ts
web/public/: _headers
web/scripts/: extract-redesign-templates.mjs  vendor-pyodide-wheels.sh
web/src/: App.test.tsx  App.tsx  download.test.ts  download.ts  i18n.test.ts  i18n.ts  main.tsx  samples.ts  useGenerate.test.ts  useGenerate.ts
web/src/components/: CodeView.tsx  ConfigDebug.test.tsx  ConfigDebug.tsx  DownloadBar.tsx  Editor.test.tsx  Editor.tsx  EmptyState.test.tsx  EmptyState.tsx  HowToModal.test.tsx  HowToModal.tsx  Library.tsx  Preview.test.tsx  Preview.tsx  SampleMenu.test.tsx  SampleMenu.tsx  SettingsDrawer.test.tsx  SettingsDrawer.tsx  SettingsModal.tsx
web/src/ds/: Badge.tsx  Divider.tsx  FileUploader.tsx  RadioGroup.tsx  Selectbox.tsx  TextInput.tsx  ds.smoke.test.tsx  index.ts
web/src/lib/: data.ts  format.ts  templates.ts  types.ts  validate.test.ts  validate.ts
web/src/styles/: css.ts  index.css
web/src/worker/: features-sources.ts  generate.worker.ts  pyodide-runtime.node.test.ts  pyodide-runtime.ts  types.ts
(+109 files in other folders)
