[project]
name = "command-ghostwriter"
version = "0.0.0"
requires-python = ">=3.11,<4.0"
dependencies = [
  "streamlit>=1.58.0,<2",
  "jinja2>=3.1.6,<4",
  "pyyaml>=6.0.3,<7",
  "chardet>=7.4.3,<8",
  "python-box>=7.4.1,<8",
  # Pinned to the 2.11 series for migrate-not-upgrade parity: tests/unit/test_document_render.py
  # asserts pydantic's error-doc URL, which embeds the minor version (errors.pydantic.dev/2.11/).
  # Lift the <2.12 ceiling in a dedicated upgrade PR that also updates that fixture.
  "pydantic>=2.13.4,<2.14",
  "toml>=0.10.2,<0.11",
  "markupsafe>=3.0.3,<4",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7.1.0,<8",
  "types-toml>=0.10.8.20260518,<0.11",
  "pre-commit>=4.6.0,<5",
  "lizard>=1.23.0,<2",
  "types-pyyaml>=6.0.12.20260518,<7",
  "pydeps>=3.0.6,<4",
  "pytest-playwright>=0.8.0,<0.9",
  "ruff>=0.15.16,<0.16",
  "pandas-stubs>=3.0.3.260530,<4",
  "mock>=5.2.0,<6",
  "gitpython>=3.1.50,<4",
  "packaging>=26.2,<27",
  "pytest-xdist>=3.8.0,<4",
  "pytest-mock>=3.15.1,<4",
  "psutil>=7.2.2,<8",
  "pytest-randomly>=4.1.0,<5",
  "pytest-benchmark==5.2.3",
  "pytest-clarity>=1.0.1,<2",
  "pygal>=3.1.0,<4",
  "pytest-timeout>=2.4.0,<3",
  "pyre-check>=0.9.25,<0.10",
  "pytest-item-dict>=1.3.7,<2",
  "pytest-xml>=0.1.1,<0.2",
  "data-to-xml>=1.0.14,<2",
  "vulture>=2.16,<3",
  "yamllint>=1.38.0,<2",
  "types-psutil>=7.2.2.20260518,<8",
  "types-requests>=2.33.0.20260518,<3",
  "pytest-rerunfailures>=16.3,<17",
]
# devcontainer 専用の対話デバッガ。CI では同期しない（uv sync --group local で追加）。
local = [
  "pudb>=2025.1.5,<2026",
]

[tool.uv]
package = false
# flake.nix がこの値を読む。実装時点の本環境 uv 0.8.17 を初期 pin とする。
required-version = "==0.8.17"

[tool.ruff]
target-version = "py312"
line-length = 140
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
lint.select = [
  "A",
  "ANN",
  "B",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "PT001",
  "RUF",
  "S",
  "SLF",
  "TC",
  "TCH",
]
lint.ignore = [
  "RUF002",
]
lint.per-file-ignores."scripts/create_pr.py" = [
  "S603",
]
lint.per-file-ignores."tests/*" = [
  "PT001", # Use @pytest.fixture{expected} over @pytest.fixture{actual}
  "PT023", # Use @pytest.mark.{mark_name}{expected_parens} over @pytest.mark.{mark_name}{actual_parens}
  "S101",  # Use of assert detected
  "S307",  # Use of assert detected
  "S603",  # `subprocess` call: check for execution of untrusted input
]
lint.per-file-ignores."tests/e2e/conftest.py" = [
  "S404",
]
lint.per-file-ignores."tests/workflow/*" = [
  "S105", # Possible hardcoded password assigned to: "{}"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "ALL",
]
lint.unfixable = [
]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = "."
addopts = [
  "-vv",
  "--maxfail=10",
  "--durations=30",
  "--import-mode=importlib",
]
markers = [
  "unit: mark a test as a unit test.",
  "integration: mark a test as an integration test.",
  "e2e: mark a test as an end-to-end test",
  "benchmark: mark a test for benchmarking",
  "smoke: mark a minimal subset run on Windows for OS-specific regression",
]

[tool.coverage.run]
parallel = false
omit = [
  "tests/e2e/*",
  ".venv/*",
  "node_modules/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "pass",
  "raise ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
check_untyped_defs = true
exclude = [
  ".venv",
  "build",
  "dist",
  "assets",
  "node_modules",
  "htmlcov",
]
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
ignore_errors = false
ignore_missing_imports = false
pretty = true
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
warn_unreachable = true

[tool.benchmark]
min_time = 0.1
max_time = 2.0
min_rounds = 3
timer = "time.perf_counter"
disable_gc = false
warmup = false
warmup_iterations = 10000

[tool.vulture]
paths = [
  "app.py",
  "features",
  "tests",
  "tests/e2e",
  "tests/unit",
]
make_whitelist = true
min_confidence = 80
sort_by_size = true
verbose = false
